test_files/negative/polymorph/polymorph.stats_strict
Not a PDF file
PDF error : Lexing error : invalid escape sequence in name context at offset 59 [0x3b] in file !
